[package]
name = "spcore"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"

[[bench]]
name = "spcore"
harness = false

[profile.release]
opt-level = 3
overflow-checks = true
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = 0
incremental = false
rpath = false

[profile.release.package."*"]
code-model = "small"
control-flow-guard = false
debug-assertions = false
embed-bitcode = true
force-unwind-tables = true
link-self-contained = true
relocation-model = "pie"
relro-level = "full"
target-cpu = "znver3"
tune-cpu = "znver3"