[package]
name = "spcore"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"

[[bench]]
name = "spcore"
harness = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
panic = 'unwind'
incremental = false
overflow-checks = true
strip = "debuginfo"
target-cpu = "znver3"
target-feature = "+avx2"
relro-level = "full"

