[package]
name = "spcore"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"

[[bench]]
name = "spcore"
harness = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
panic = 'unwind'
incremental = true
overflow-checks = false
strip = "debuginfo"


[profile.dev-asm]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
